--- a/asset/index.less
+++ b/asset/index.less
@@ -169,10 +169,10 @@
 
   .snapshot {
     width: 50px;
-    height: 55px;
+    height: 50px;
     //margin-bottom: 5px;
     //margin-top: 10px;
-    border-radius: 10px;
+
 
   }
 
@@ -206,27 +206,6 @@
     border-radius: 5px;
   }
 
-
-
-
-  .bt-order {
-    background-color: #f60;
-    width: 120px;
-    color: #fff;
-    display: inline-block;
-    border: none;
-    height: 40px;
-    padding: 0 10px;
-    vertical-align: top;
-    font-size: 15px;
-    letter-spacing: 2px;
-    &:disabled {
-      background-color: #999;
-    }
-    &:hover {
-      opacity: .8;
-    }
-  }
   .empty {
     text-align: center;
     padding: 30px 0;
@@ -240,58 +219,7 @@
     color: #999;
     padding: 30px 0;
   }
-  .order-table{
-    width:100%;
-    thead{
-      th{
-        background-color: #f5f5f5;
-        height: 30px;
-      }
-    }
-    td{
-      text-align: center;
-      border-top: dotted 1px #f5f5f5;
-      padding:0 5px;
-    }
-  }
-  .amount-up,.amount-down{
-    width:40px;
-    height:30px;
-    background-color: #f5f5f5;
-    border:solid 1px transparent;
-    padding:0;
-    outline: none;
-    &:before{
-      content: '';
-      width:0;
-      height: 0;
-      font-size:0;
-      display: inline-block;
-      border-width: 5px;
-      border-style:solid;
-    }
-    &:hover{
-      background-color: #ccc;
-    }
-  }
-  .amount-up:before{
 
-    border-color:transparent transparent #333 transparent;
-    margin-top:-3px;
-  }
-  .amount-down:before{
-    margin-top:5px;
-    border-color:#333 transparent transparent transparent;
-  }
-  .amount-input{
-    width: 40px;
-    height: 30px;
-    font-size:15px;
-    border:solid 1px #ccc;
-    text-align: center;
-    padding:0;
-    margin:5px 0;
-  }
   .price{
     color:#f60;
     font-size:1.2em;
@@ -456,12 +384,13 @@
         text-align: left;
         color:#08c;
         background-color: #def;
+        padding:5px;
         //border-bottom: solid 1px #ccc;
       }
     }
     tbody{
       td {
-        border-top: solid 1px #ccc;
+        border-top: solid 1px #f5f5f5;
         //border-bottom: solid 1px #ccc;
         padding:5px;
 
@@ -473,6 +402,9 @@
         border-top: solid 1px #f5f5f5;
       }
     }
+    .order-op{
+      text-align: right;
+    }
 
   }
 
@@ -482,6 +414,48 @@
     float: left;
     margin-right: 8px;
     text-align: center;
+  }
+  .status{
+
+  }
+  .order-op{
+    button{
+      background-color: #f5f5f5;
+      border-radius: 5px;
+      border: solid 1px #ccc;
+      font-size:12px;
+      padding:5px;
+      min-width: 50px;
+
+    }
+  }
+
+  .wuliu-detail{
+    font-size: 12px;
+    text-align: left;
+  }
+  .wuliu-detail dt{
+    border-bottom:solid 1px #f5f5f5;
+    padding:5px 0;
+    margin-bottom: 10px;
+  }
+  .wuliu-detail dd{
+    padding:2px 0px 2px 130px;
+    margin:0;
+    line-height: 1.6;
+    color:#888;
+  }
+  .wuliu-detail dd:nth-of-type(1){
+    color:#555;
+  }
+  .wuliu-detail dd>.time{
+    float:left;
+    margin-left:-130px;
+
+  }
+
+  .wuliu-detail dt>.status{
+    color:#f60;
   }
 
 
