--- a/asset/card.less
+++ b/asset/card.less
@@ -30,7 +30,7 @@
   font-family: '黑体', sans-serif;
   font-weight: 700;
   text-shadow: 5px -5px 1px #444;
-  transform: scale(1,1.2);
+  -webkit-transform: scale(1,1.2);
   overflow: hidden;
 }
 .card-body{
