--- a/asset/index.less
+++ b/asset/index.less
@@ -134,8 +134,8 @@
   }
 
   .snapshot > .preview {
-    transform: scale(.1);
-    transform-origin: 0 0;
+    -webkit-transform: scale(.1);
+    -webkit-transform-origin: 0 0;
     margin: 0;
   }
 
@@ -227,7 +227,7 @@
       height:5px;
       margin-top:5px;
       margin-right: -9px;
-      transform: rotate(45deg);
+      -webkit-transform: rotate(45deg);
     }
   }
   .fullpopup{
@@ -239,8 +239,8 @@
     width: 100%;
     height: 100%;
     z-index: 9;
-    transition: transform .3s;
-    transform: translate(0 ,100%);
+    transition: -webkit-transform .3s;
+    -webkit-transform: translate(0 ,100%);
     .title{
       font-size:16px;
       background-color: #f5f5f5;
@@ -260,7 +260,7 @@
   }
   .fullpopup.show{
     box-shadow: 1px 1px 10px #000;
-    transform: translate(0,0);
+    -webkit-transform: translate(0,0);
 
   }
   .address-form{
